--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "aos/dist/aos.css";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -23,7 +24,12 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
+}
+
+html, body {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 @keyframes marquee-left {
