--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 @import "aos/dist/aos.css";
 
+h1, h2, h3, h4, h5 {
+  font-family: "Poppins", Sans-serif;
+}
 
 :root {
   --background: #ffffff;
@@ -24,7 +27,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: sans-serif;
+  font-family: Helvetica, sans-serif;
 }
 
 html, body {
